style.css
* {
    /* border: 1px solid white; */
    text-align: center;
    box-sizing: border-box;
    color: white;
}

body, html {
    margin: 0;
    padding: 0;
    
}

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    
}

p {
    padding: 0;
    margin: 0;
}

div {
    display: flex;
    justify-content: center;
    align-items: center;
    
    
}

button {
    border: 2px solid white;
    border-radius: 20px;
}

button:hover {
    border: 3px solid yellow;
}

.header {
    height: 15vh;
    font-size: 3em;
    background-color: #310750;
}

.instructions {
    display: flex;
    flex-direction: column;
    font-size: 2em;
    background-color: #0c0750;
}

.instructions div {
    height: 5vh;
}

.rubric {
    
}


.rules {
    
}

.weapons {
    height: 20vh;
    gap: 1.5em;
    background-color: #072750;
}

.weapons button {
    /* border: 2px solid white; */
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 5em;
    height: 1.5em;
    width: 1.5em;
    background-color: #0c0750;
    /* border-radius: 20px; */
}

.ui {
    display: flex;
    justify-content: space-evenly;
    flex: 1;
    font-size: 6em;
    background-color: #0c0750;
}



.player {
    height: 12vh;
    width: 12vh;
}

.pc {
    height: 12vh;
    width: 12vh;
}

.vs {
    font-size: .5em;
}

.score {
    font-size: 24px;
    align-items: center;
    flex-direction: column;
    justify-content: center;
}


.message {
    flex-direction: column;
    height: 15vh;
    font-size: 3em;
    background-color: #072750;
}

.message button{
    font-size: .7em;
    background-color: transparent;
    padding: 1px 20px;
    /* border: 2px solid white; */
    /* border-radius: 20px; */
}

.footer {
    height: 5vh;
    background-color: #0c0750;
}

